syntax = "proto3";
option java_package = "io.asdx.grpc.stub.msg";
import "google/protobuf/any.proto";

message BaseResponse {
    int32 code = 1;
    string msg = 2;
    google.protobuf.Any data = 3;
}