syntax = "proto3";

option java_package = "io.asdx.grpc.stub.service";

import "io/asdx/grpc/stub/msg/User.proto";
import "io/asdx/grpc/stub/msg/BaseResponse.proto";

service GreeterService {

    rpc sayHello(HelloRequest) returns (BaseResponse) {}

}

message HelloRequest {
    int64 id = 1;
    int32 age = 2;
    uint32 a = 3;
    uint64 b = 4;
}

message HelloResponse {
    User user = 1;
    repeated User users = 2;

}